--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,48 @@
 # .env.example
-# PostgreSQL Database Configuration
-POSTGRES_USERNAME=your_username
-POSTGRES_PASSWORD=your_password
-POSTGRES_HOST=localhost
-POSTGRES_DATABASE=your_database
 
-# HTTP Server Configuration
-PORT=3000
+# ============================================
+# PostgreSQL Configuration (Shared with Airflow)
+# ============================================
+# For Airflow
+POSTGRES_USER=airflow
+POSTGRES_PASSWORD=airflow
+POSTGRES_DB=airflow
+POSTGRES_TAG=17
+
+# For MCP Server (separate variables, same database)
+POSTGRES_USERNAME=airflow
+POSTGRES_PASSWORD=airflow
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_DATABASE=airflow
+
+# Alternative: Use connection string instead
+# POSTGRES_URL=postgresql://username:password@host:port/database
+
+# ============================================
+# Airflow Configuration
+# ============================================
+AIRFLOW__CORE__FERNET_KEY=your_fernet_key_here
+AIRFLOW__CORE__LOAD_EXAMPLES=false
+
+# ============================================
+# MCP Server Configuration
+# ============================================
+PORT=4000
 HOST=0.0.0.0
 
 # CORS Configuration (comma-separated list of allowed origins)
 CORS_ORIGIN=http://localhost:8080,http://localhost:3000
 
 # Environment
-NODE_ENV=development
+NODE_ENV=production
+
+# ============================================
+# API Tokens (for Airflow DAGs)
+# ============================================
+API_TOKEN_CL=your_token_here
+API_TOKEN_COL=your_token_here
+API_TOKEN_PE=your_token_here
+API_BASE_CL=your_api_base_here
+API_BASE_COL=your_api_base_here
+API_BASE_PE=your_api_base_here
