--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,50 +2,188 @@
 version: '3.8'
 
 services:
-  # HTTP Server
+  # ============================================
+  # PostgreSQL Database
+  # ============================================
+  postgres:
+    image: postgres:${POSTGRES_TAG:-17}
+    container_name: pg-airflow
+    env_file: .env
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER:-airflow}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-airflow}
+      POSTGRES_DB: ${POSTGRES_DB:-airflow}
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - airflow-mcp-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-airflow} -d ${POSTGRES_DB:-airflow}"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
+  # ============================================
+  # Airflow Services
+  # ============================================
+  airflow-init:
+    image: apache/airflow:2.10.2
+    container_name: airflow-init
+    env_file: .env
+    environment:
+      AIRFLOW__CORE__DEFAULT_TIMEZONE: America/Santiago
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: >-
+        postgresql+psycopg2://${POSTGRES_USER:-airflow}:${POSTGRES_PASSWORD:-airflow}@postgres/${POSTGRES_DB:-airflow}
+      AIRFLOW__CORE__FERNET_KEY: ${AIRFLOW__CORE__FERNET_KEY}
+      AIRFLOW__CORE__LOAD_EXAMPLES: ${AIRFLOW__CORE__LOAD_EXAMPLES:-false}
+      _PIP_ADDITIONAL_REQUIREMENTS: "psycopg2-binary requests"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - airflow-mcp-network
+    entrypoint: /bin/bash
+    command: 
+      - -c
+      - |
+        airflow db migrate
+        airflow users create --username admin --firstname Admin --lastname User --role Admin --email admin@example.com --password admin 2>/dev/null || echo "Admin user already exists"
+
+  airflow-webserver:
+    image: apache/airflow:2.10.2
+    container_name: airflow-webserver
+    env_file: .env
+    environment:
+      TZ: America/Santiago
+      AIRFLOW__CORE__DEFAULT_TIMEZONE: America/Santiago
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: >-
+        postgresql+psycopg2://${POSTGRES_USER:-airflow}:${POSTGRES_PASSWORD:-airflow}@postgres/${POSTGRES_DB:-airflow}
+      AIRFLOW__CORE__FERNET_KEY: ${AIRFLOW__CORE__FERNET_KEY}
+      AIRFLOW__CORE__LOAD_EXAMPLES: ${AIRFLOW__CORE__LOAD_EXAMPLES:-false}
+      _PIP_ADDITIONAL_REQUIREMENTS: "psycopg2-binary requests"
+      API_TOKEN_CL: ${API_TOKEN_CL}
+      API_TOKEN_COL: ${API_TOKEN_COL}
+      API_TOKEN_PE: ${API_TOKEN_PE}
+      API_BASE_CL: ${API_BASE_CL}
+      API_BASE_COL: ${API_BASE_COL}
+      API_BASE_PE: ${API_BASE_PE}
+    depends_on:
+      postgres:
+        condition: service_healthy
+      airflow-init:
+        condition: service_completed_successfully
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./dags:/opt/airflow/dags
+      - ./logs:/opt/airflow/logs
+      - ./plugins:/opt/airflow/plugins
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
+    networks:
+      - airflow-mcp-network
+    command: webserver
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  airflow-scheduler:
+    image: apache/airflow:2.10.2
+    container_name: airflow-scheduler
+    env_file: .env
+    environment:
+      TZ: America/Santiago
+      AIRFLOW__CORE__DEFAULT_TIMEZONE: America/Santiago
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: >-
+        postgresql+psycopg2://${POSTGRES_USER:-airflow}:${POSTGRES_PASSWORD:-airflow}@postgres/${POSTGRES_DB:-airflow}
+      AIRFLOW__CORE__FERNET_KEY: ${AIRFLOW__CORE__FERNET_KEY}
+      AIRFLOW__CORE__LOAD_EXAMPLES: ${AIRFLOW__CORE__LOAD_EXAMPLES:-false}
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor
+      _PIP_ADDITIONAL_REQUIREMENTS: "psycopg2-binary requests"
+      API_TOKEN_CL: ${API_TOKEN_CL}
+      API_TOKEN_COL: ${API_TOKEN_COL}
+      API_TOKEN_PE: ${API_TOKEN_PE}
+      API_BASE_CL: ${API_BASE_CL}
+      API_BASE_COL: ${API_BASE_COL}
+      API_BASE_PE: ${API_BASE_PE}
+    depends_on:
+      postgres:
+        condition: service_healthy
+      airflow-init:
+        condition: service_completed_successfully
+    volumes:
+      - ./dags:/opt/airflow/dags
+      - ./logs:/opt/airflow/logs
+      - ./plugins:/opt/airflow/plugins
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
+    networks:
+      - airflow-mcp-network
+    command: scheduler
+
+  # ============================================
+  # MCP Server Services
+  # ============================================
   mcp-http:
     build:
       context: .
       platforms:
         - linux/amd64
       dockerfile: src/http/Dockerfile
+    container_name: mcp-http
     ports:
-      - "3000:3000"
+      - "4000:4000"
     environment:
-      - POSTGRES_USERNAME=${POSTGRES_USERNAME}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_HOST=${POSTGRES_HOST}
-      - POSTGRES_DATABASE=${POSTGRES_DATABASE}
-      - PORT=3000
+      - POSTGRES_USERNAME=${POSTGRES_USERNAME:-airflow}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-airflow}
+      - POSTGRES_HOST=${POSTGRES_HOST:-postgres}
+      - POSTGRES_PORT=${POSTGRES_PORT:-5432}
+      - POSTGRES_DATABASE=${POSTGRES_DATABASE:-airflow}
+      - PORT=4000
       - HOST=0.0.0.0
-      - CORS_ORIGIN=${CORS_ORIGIN:-http://localhost:8080,http://localhost:3000}
+      - CORS_ORIGIN=${CORS_ORIGIN:-http://localhost:8080,http://localhost:4000}
+      - NODE_ENV=${NODE_ENV:-production}
+    depends_on:
+      postgres:
+        condition: service_healthy
     networks:
-      - mcp-network
-
+      - airflow-mcp-network
     restart: unless-stopped
-
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://0.0.0.0:3000/health"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://0.0.0.0:4000/health"]
       interval: 10s
       timeout: 5s
       retries: 5
+
   mcp-stdio:
     build:
       context: .
       dockerfile: src/stdio/Dockerfile
+    container_name: mcp-stdio
     environment:
-        - POSTGRES_USERNAME=${POSTGRES_USERNAME}
-        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-        - POSTGRES_HOST=${POSTGRES_HOST}
-        - POSTGRES_DATABASE=${POSTGRES_DATABASE}
+      - POSTGRES_USERNAME=${POSTGRES_USERNAME:-airflow}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-airflow}
+      - POSTGRES_HOST=${POSTGRES_HOST:-postgres}
+      - POSTGRES_PORT=${POSTGRES_PORT:-5432}
+      - POSTGRES_DATABASE=${POSTGRES_DATABASE:-airflow}
+    depends_on:
+      postgres:
+        condition: service_healthy
     networks:
-      - mcp-network
+      - airflow-mcp-network
     restart: "no"
     profiles:
       - stdio
     stdin_open: true
     tty: true
 
+volumes:
+  postgres_data:
+
 networks:
-  mcp-network:
+  airflow-mcp-network:
     driver: bridge
