--- a/src/http/Dockerfile
+++ b/src/http/Dockerfile
@@ -10,11 +10,13 @@ WORKDIR /app
 RUN --mount=type=cache,target=/root/.npm npm install
 RUN npm run build
 
-RUN apk add wget
 # Production dependencies
 RUN --mount=type=cache,target=/root/.npm-production npm ci --ignore-scripts --omit=dev
 
 FROM node:22-alpine AS release
+
+# Install wget for healthcheck
+RUN apk add --no-cache wget
 
 # Copy built application
 COPY --from=builder /app/dist/ /app/dist/
